fix #22: added icon in date/time picker and also fixed some wrong position issues

--- a/src/bootstrap/bootstrap_override.css
+++ b/src/bootstrap/bootstrap_override.css
@@ -72,6 +72,11 @@ html, body {
   padding-bottom: 2px;
 }
 
+/* Remove the annoying clear input text icon "X" from MSIE 10+ */
+.form-control::-ms-clear {
+  display: none;
+}
+
 /* Fix visual glitches of indicator icon in an input/search box (2 rules) */
 .form-control-feedback {
   cursor: pointer;
